Attempts to fix text-wrap issue for ios

--- a/style/format.css
+++ b/style/format.css
@@ -89,14 +89,13 @@
 		border-bottom-style: solid;
 		border-color: #882D6A;
 		padding-bottom: 5px;
-		font-size: 1.3em;
 	}
 
 	.navigation li {
 		display: inline;
 		margin-left: 0.5em;
 		margin-right: 0.5em;
-		font-size: 20px;
+		font-size: 100%;
 	}
 }
 
